Adding a new scenario

--- a/specflow-mstest/specflow-mstest.csproj
+++ b/specflow-mstest/specflow-mstest.csproj
@@ -60,6 +60,7 @@
       <DependentUpon>MyFeature.feature</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Steps\MyFeatureSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
